Fix: Align top-right column with page content
There are a number of ways to accomplish this, but this one is the most
straight-forward IMO.

--- a/html/style/ghCore.css
+++ b/html/style/ghCore.css
@@ -120,6 +120,7 @@ ul.plain li {
 }
 #topRightColumn {
 	width: 33%;
+	float: right;
 }
 .wrapper {
 	min-width: 800px;
